--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,7 @@
         "/usr/local/gcc-14.1.0/include",
         "/usr/local/gcc-14.1.0/include/c++/14.1.0"
     ],
-    "C_Cpp.default.intelliSenseMode": "clang-x64",
+    "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "files.associations": {
         "*.pyx": "python",
         "*.mpp": "cpp",
