Set up CMake for unit tests; add workflows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,7 +8,7 @@
     "C_Cpp.default.compilerPath": "/usr/local/gcc-14.1.0/bin/g++-14.1.0",
     "C_Cpp.default.cppStandard": "c++23",
     "C_Cpp.default.includePath": [
-        "${workspaceFolder}/src",
+        "${workspaceFolder}/include",
         "/usr/local/gcc-14.1.0/include",
         "/usr/local/gcc-14.1.0/include/c++/14.1.0"
     ],
