Add can_promote test cases for small fixed-width ints

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
         "variant": "cpp",
         "format": "cpp",
         "print": "cpp",
-        "text_encoding": "cpp"
+        "text_encoding": "cpp",
+        "ranges": "cpp"
     },
 }
