--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -4,10 +4,15 @@ jobs:
   formatting-check:
     name: Formatting Check
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        path:
+          - 'include'
+          - 'tests'
     steps:
     - uses: actions/checkout@v4
     - name: Run clang-format style check for C/C++/Protobuf programs.
       uses: jidicula/clang-format-action@v4.13.0
       with:
         clang-format-version: '14'
-        check-path: 'include'
+        check-path: ${{ matrix.path }}
